# cubbi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPECIFICATIONS.md  pyproject.toml  test.sh
.github/workflows/: pytests.yml
cubbi/: cli.py  config.py  configure.py  container.py  model_fetcher.py  models.py  user_config.py
cubbi/images/: cubbi_init.py
cubbi/images/aider/: Dockerfile  aider_plugin.py  cubbi_image.yaml  test_aider.py
cubbi/images/claude/: Dockerfile  README.md  cubbi-image.yaml  cubbi-init.sh  entrypoint.sh  init-status.sh
cubbi/images/claude-code/: Dockerfile  README.md  claude_code_plugin.py  cubbi_image.yaml  cubbi_init.py
cubbi/images/claudecode/: Dockerfile  claudecode_plugin.py  cubbi_image.yaml  test_claudecode.py
cubbi/images/crush/: crush_plugin.py  cubbi_image.yaml
cubbi/images/gemini-cli/: Dockerfile  README.md  cubbi_image.yaml  test_gemini.py  (+1 more)
docs/specs/: 1_SPECIFICATIONS.md  2_MCP_SERVER.md  3_IMAGE.md
drivers/goose/: Dockerfile  README.md  entrypoint.sh  init-status.sh  mai-driver.yaml  mai-init.sh  mc-driver.yaml  mc-init.sh
eval-tool/: package-lock.json  package.json
mcontainer/: __init__.py  cli.py  config.py  container.py  eval.py  mcp.py  models.py  run_goose_benchmarks.py  service.py  session.py  user_config.py
mcontainer/drivers/: __init__.py  base.py
mcontainer/utils/: __init__.py  git.py  goose.py
tests/: conftest.py  test_aider_driver.py  test_cli.py  test_config_commands.py  test_integration.py  test_integration_docker.py  test_mcp_commands.py  test_mcp_port_binding.py  test_session_commands.py
(+48 files in other folders)
